[PRM-2305] Moved letter kick out page load to YouCannotAppealController

--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -27,10 +27,10 @@
     <p class="govuk-body"> @messages("serviceUnavailable.p2")</p>
     <p class="govuk-body"> @messages("serviceUnavailable.p3")</p>
     <p class="govuk-body">
-        @messages("serviceUnavailable.p4")
+        @messages("common.address.1")
         <br>
-        @messages("serviceUnavailable.p5")
+        @messages("common.address.2")
         <br>
-        @messages("serviceUnavailable.p6")
+        @messages("common.address.3")
     </p>
 }
