--- a/app/views/obligation/AppealByLetterKickOutPage.scala.html
+++ b/app/views/obligation/AppealByLetterKickOutPage.scala.html
@@ -46,9 +46,9 @@
 
     <div class="govuk-inset-text">
         <p class="govuk-body govuk-!-margin-bottom-0">@messages("appealByLetter.inset.1")</p>
-        <p class="govuk-body govuk-!-margin-bottom-0">@messages("appealByLetter.inset.2")</p>
-        <p class="govuk-body govuk-!-margin-bottom-0">@messages("appealByLetter.inset.3")</p>
-        <p class="govuk-body govuk-!-margin-bottom-0">@messages("appealByLetter.inset.4")</p>
+        <p class="govuk-body govuk-!-margin-bottom-0">@messages("common.address.1")</p>
+        <p class="govuk-body govuk-!-margin-bottom-0">@messages("common.address.2")</p>
+        <p class="govuk-body govuk-!-margin-bottom-0">@messages("common.address.3")</p>
     </div>
 
     <p class="govuk-body">
