--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -28,8 +28,8 @@
     <p class="govuk-body">@messages("serviceUnavailable.p2")</p>
     <p class="govuk-body">@messages("serviceUnavailable.p3")</p>
     <p class="govuk-body">
-        @messages("serviceUnavailable.p4")<br>
-        @messages("serviceUnavailable.p5")<br>
-        @messages("serviceUnavailable.p6")
+        @messages("common.address.1")<br>
+        @messages("common.address.2")<br>
+        @messages("common.address.3")
     </p>
 }
