--- a/app/views/components/pageHeader.scala.html
+++ b/app/views/components/pageHeader.scala.html
@@ -25,18 +25,17 @@
 
 @captionPenaltyAppeal = @{if(appealBothPenalties.contains("yes")) messages("common.penaltiesYouAreAppealing") else messages("common.penaltyYouAreAppealing")}
 
-<header class="hmrc-page-heading govuk-!-margin-top-0 govuk-!-margin-bottom-4" id="hmrc-page-header">
-  <p class="govuk-caption-l hmrc-caption-l govuk-!-font-size-24 penalty-information-caption">
-    <span class="govuk-visually-hidden">@messages(captionPenaltyAppeal)</span>
-    @{
-      messages("penaltyInformation.headerText",
-        PenaltyTypeHelper.getKeysFromSession().get.head,
-        PenaltyTypeHelper.getKeysFromSession().get(1),
-        PenaltyTypeHelper.getKeysFromSession().get.last
-      )
-    }
-  </p>
-  <h1 class="govuk-heading-l govuk-!-margin-bottom-0" id="page-heading">
-    @pageHeader
-  </h1>
-</header>
+<h2 class="govuk-caption-l hmrc-caption-l govuk-!-margin-top-1" id="page-caption">
+  <span class="govuk-visually-hidden">@messages(captionPenaltyAppeal)</span>
+  @{
+    messages("penaltyInformation.headerText",
+      PenaltyTypeHelper.getKeysFromSession().get.head,
+      PenaltyTypeHelper.getKeysFromSession().get(1),
+      PenaltyTypeHelper.getKeysFromSession().get.last
+    )
+  }
+</h2>
+
+<h1 class="govuk-heading-l govuk-!-margin-bottom-4" id="page-heading">
+  @pageHeader
+</h1>
