--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -18,7 +18,8 @@
 bullets: components.bullets,
 formHelper: FormWithCSRF,
 button: components.button,
-radios: components.radios)
+radios: components.radios,
+pageHeader: components.pageHeader)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
@@ -27,12 +28,14 @@ radios: components.radios)
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
+    @pageHeader(messages("cancelVATRegistration.headingAndTitle"))
     @formHelper(action = postAction) {
         @radios(
             form = form,
-            legendContent = messages("cancelVATRegistration.headingAndTitle"),
+            legendContent = "",
             hint = Some(Html(messages("cancelVATRegistration.hintText"))),
-            items = radioOptions
+            items = radioOptions,
+            showPenaltyInformation = false
         )
     @button("common.continue")
     }
