--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -26,7 +26,8 @@
         details: components.details,
         p: components.p,
         bullets: components.bullets,
-        pageHeader: components.pageHeader)
+        pageHeader: components.pageHeader,
+        link: components.link)
 
 @(
         postAction: Call,
@@ -37,7 +38,8 @@
         previousUploads: String,
         getDuplicatesUrl: Call,
         getErrorServiceUrl: Call,
-        pageMode: PageMode)(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
+        pageMode: PageMode,
+        nextPageUrl: String)(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
 @appealType = @{request.answers.getAnswer[PenaltyTypeEnum.Value](SessionKeys.appealType)}
 @detailsContent = {
@@ -113,8 +115,11 @@
             <script type="text/x-template" id="error-manager-summary-item-tpl">@errorManager.summaryItem(messages)</script>
             <script type="text/x-template" id="error-manager-message-tpl">@errorManager.message(messages)</script>
 
-            <p>
-                @button("common.continue")
-            </p>
+            <div class="govuk-button-group">
+                <p>
+                    @button("common.continue")
+                    @link(nextPageUrl, "fileUpload.skipFileUpload.button.text", id = Some("skip-file-upload"), button = true, classes = "govuk-button govuk-button--secondary")
+                </p>
+            </div>
         }
 }
