--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -17,6 +17,7 @@
 @this(layout: Layout,
 bullets: components.bullets,
 formHelper: FormWithCSRF,
+pageHeader: components.pageHeader,
 button: components.button,
 radios: components.radios)
 
@@ -27,12 +28,15 @@ radios: components.radios)
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
+    @pageHeader(messages("cancelVATRegistration.headingAndTitle"), showPageHeader = false)
     @formHelper(action = postAction) {
         @radios(
             form = form,
             legendContent = messages("cancelVATRegistration.headingAndTitle"),
             hint = Some(Html(messages("cancelVATRegistration.hintText"))),
-            items = radioOptions
+            items = radioOptions,
+            legendClasses = "govuk-fieldset__legend--l",
+            showPenaltyInformation = false
         )
     @button("common.continue")
     }
