--- a/app/views/components/pageHeader.scala.html
+++ b/app/views/components/pageHeader.scala.html
@@ -19,7 +19,7 @@
 
 @this()
 
-@(pageHeader: String)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
+@(pageHeader: String, showPageHeader: Boolean = true)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @appealBothPenalties = @{userRequest.answers.getAnswer[String](SessionKeys.doYouWantToAppealBothPenalties)}
 
@@ -36,6 +36,8 @@
   }
 </h2>
 
-<h1 class="govuk-heading-l govuk-!-margin-bottom-4" id="page-heading">
-  @pageHeader
-</h1>
+@if(showPageHeader) {
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-4" id="page-heading">
+        @pageHeader
+    </h1>
+}
