[PRM-2359] Added skip file button to js upload page (#426)
* [PRM-2359] Added skip file button to js upload page

* [PRM-2359] Called postaction url within view

* [PRM-2359] Removed p tag

* [PRM-2359] Updated unit tests

* [PRM-2359] Added skip button destination test

--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -26,7 +26,8 @@
         details: components.details,
         p: components.p,
         bullets: components.bullets,
-        pageHeader: components.pageHeader)
+        pageHeader: components.pageHeader,
+        link: components.link)
 
 @(
         postAction: Call,
@@ -113,8 +114,9 @@
             <script type="text/x-template" id="error-manager-summary-item-tpl">@errorManager.summaryItem(messages)</script>
             <script type="text/x-template" id="error-manager-message-tpl">@errorManager.message(messages)</script>
 
-            <p>
-                @button("common.continue")
-            </p>
+            <div class="govuk-button-group">
+                    @button("common.continue")
+                    @link(postAction.url, "fileUpload.skipFileUpload.button.text", id = Some("skip-file-upload"), button = true, classes = "govuk-button govuk-button--secondary")
+            </div>
         }
 }
