[PRM-2354] Updated input date component for fieldset

--- a/app/views/AppealSinglePenaltyPage.scala.html
+++ b/app/views/AppealSinglePenaltyPage.scala.html
@@ -33,7 +33,7 @@
   isPageFullWidth = false,
   optPageMode = Some(pageMode)) {
 
-  @pageHeader(messages("appealSinglePenalty.headingAndTitle"))
+  @pageHeader(Some(messages("appealSinglePenalty.headingAndTitle")))
   <p class="govuk-body">@messages("appealSinglePenalty.p1", penaltyTypeMessage)</p>
   <p class="govuk-body">@messages("appealSinglePenalty.p2")</p>
 
