--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -30,7 +30,7 @@
     isPageFullWidth = false,
     optPageMode = Some(pageMode)) {
 
-    @pageHeader(messages("checkYourAnswers.headingAndTitle"))
+    @pageHeader(Some(messages("checkYourAnswers.headingAndTitle")))
     <h2 class="govuk-heading-m" id="appeal-details">@messages("checkYourAnswers.appealDetails.h2")</h2>
 
     <dl class="govuk-summary-list">
