--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -31,7 +31,7 @@
     isPageFullWidth = false,
     optPageMode = Some(pageMode)) {
 
-    @pageHeader(messages("honestyDeclaration.headingAndTitle"))
+    @pageHeader(Some(messages("honestyDeclaration.headingAndTitle")))
     <p class="govuk-body">@messages("honestyDeclaration.p1")</p>
     <ul class="govuk-list govuk-list--bullet">
         <li>
