--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -34,7 +34,7 @@
   formErrors = form.errors,
   optPageMode = Some(pageMode)) {
 
-  @header(headingAndTitle)
+  @header(Some(headingAndTitle))
 
   @p(Html(messages("makingALateAppeal.p1")))
 
