--- a/app/views/errors/IncompleteSessionDataPage.scala.html
+++ b/app/views/errors/IncompleteSessionDataPage.scala.html
@@ -27,7 +27,7 @@
   isPageFullWidth = false,
   backLinkEnabled = false
 ) {
-  @pageHeader(messages("incompleteSessionData.headingAndTitle"))
+  @pageHeader(Some(messages("incompleteSessionData.headingAndTitle")))
 
   <p class="govuk-body">@messages("incompleteSessionData.p1")</p>
 
