--- a/app/views/obligation/YouCanAppealPenaltyPage.scala.html
+++ b/app/views/obligation/YouCanAppealPenaltyPage.scala.html
@@ -29,7 +29,7 @@
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
 
-    @pageHeader(messages("youCanAppealThisPenalty.headingAndTitle"))
+    @pageHeader(Some(messages("youCanAppealThisPenalty.headingAndTitle")))
     <p class="govuk-body">@messages("youCanAppealThisPenalty.p1")</p>
     @bullets(
         Seq(
