--- a/app/views/AppealCoverBothPenaltiesPage.scala.html
+++ b/app/views/AppealCoverBothPenaltiesPage.scala.html
@@ -27,7 +27,7 @@
   isPageFullWidth = false,
   optPageMode = Some(pageMode)) {
 
-  @pageHeader(messages("appealCoverBothPenalties.headingAndTitle"))
+  @pageHeader(Some(messages("appealCoverBothPenalties.headingAndTitle")))
 
   <p class="govuk-body">@messages("appealCoverBothPenalties.p1")</p>
 
