--- a/app/views/components/pageHeader.scala.html
+++ b/app/views/components/pageHeader.scala.html
@@ -19,7 +19,7 @@
 
 @this()
 
-@(pageHeader: String, showPageHeader: Boolean = true)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
+@(pageHeader: Option[String] = None)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @appealBothPenalties = @{userRequest.answers.getAnswer[String](SessionKeys.doYouWantToAppealBothPenalties)}
 
@@ -36,8 +36,8 @@
   }
 </h2>
 
-@if(showPageHeader) {
+@if(pageHeader.isDefined) {
     <h1 class="govuk-heading-l govuk-!-margin-bottom-4" id="page-heading">
-        @pageHeader
+        @pageHeader.get
     </h1>
 }
