--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -31,7 +31,7 @@
 )(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @legend = {
-    <h1 class="govuk-fieldset__heading">
+    <h1 class="govuk-fieldset__heading" id ="page-heading">
         @legendContent
     </h1>
 }
