--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
@@ -66,7 +66,7 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-    @pageHeader(messages("otherReason.uploadEvidence.headingAndTitle"))
+    @pageHeader(Some(messages("otherReason.uploadEvidence.headingAndTitle")))
     <p class="govuk-body">@messages("otherReason.uploadEvidence.noJs.p1")</p>
     <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
