--- a/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
@@ -20,6 +20,7 @@
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
+        pageHeader: components.pageHeader,
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call, messagePrefix: String, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -29,17 +30,15 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-
     @formHelper(action = postAction) {
-
+        @pageHeader()
         @dateInput(
             form = form,
             legendContent = messages(s"$messagePrefix.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend--xl"),
+            legendClasses = Some("govuk-fieldset__legend--l"),
             hintText = Some(messages("whenDidEventHappen.hint")),
             legendAsPageHeading = true
         )
-
         @button("common.continue")
     }
 
