[PRM-2354] Removed legendasheading from date input

--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -36,7 +36,7 @@ radios: components.radios)
             hint = Some(Html(messages("cancelVATRegistration.hintText"))),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend--l",
-            showPenaltyInformation = true
+            legendAsPageHeading = true
         )
     @button("common.continue")
     }
