--- a/app/views/PenaltySelectionPage.scala.html
+++ b/app/views/PenaltySelectionPage.scala.html
@@ -51,7 +51,7 @@
       form = form,
       legendContent = messages("penaltySelection.form.heading"),
       items = radioOptions,
-      showPenaltyInformation = false,
+      legendAsPageHeading = false,
       legendClasses = "govuk-fieldset__legend govuk-fieldset__legend--m"
     )
     @button("common.continue")
