--- a/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
+++ b/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
@@ -34,7 +34,7 @@
             legendContent = messages("agents.whoPlannedToSubmitVATReturn.headingAndTitle"),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend--l",
-            showPenaltyInformation = true
+            legendAsPageHeading = true
         )
 
         @button("common.continue")
