--- a/app/views/obligation/YouCanAppealPenaltyPage.scala.html
+++ b/app/views/obligation/YouCanAppealPenaltyPage.scala.html
@@ -44,7 +44,7 @@
             hint = None,
             legendClasses = "govuk-fieldset__legend",
             items = radioOptions,
-            showPenaltyInformation = false
+            legendAsPageHeading = false
         )
         @button("common.continue")
     }
