--- a/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
@@ -37,7 +37,7 @@
             legendContent = messages("crimeReason.hasBeenReported.headingAndTitle"),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend--l",
-            showPenaltyInformation = true
+            legendAsPageHeading = true
         )
 
         @button("common.continue")
