--- a/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/fireOrFlood/WhenDidFireOrFloodHappenPage.scala.html
@@ -36,8 +36,7 @@
             form = form,
             legendContent = messages("fireOrFloodReason.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend--l"),
-            hintText = Some(messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            hintText = Some(messages("whenDidEventHappen.hint"))
         )
 
         @button("common.continue")
