--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -37,8 +37,7 @@
             form = form,
             legendContent = messages(getMessageKeyForPage("health.whenHealthIssueHappened.headingAndTitle")),
             legendClasses = Some("govuk-fieldset__legend--l"),
-            hintText = Some(messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            hintText = Some(messages("whenDidEventHappen.hint"))
         )
 
         @button("common.continue")
