--- a/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHospitalStayBeginPage.scala.html
@@ -35,8 +35,7 @@
             form = form,
             legendContent = messages("healthReason.whenDidHospitalStayBegin.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend--l"),
-            hintText = Some(messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            hintText = Some(messages("whenDidEventHappen.hint"))
         )
 
         @button("common.continue")
