--- a/app/views/reasonableExcuseJourneys/other/RemoveFilePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/RemoveFilePage.scala.html
@@ -44,7 +44,7 @@
       legendContent = messages("otherReason.uploadEvidence.removeFile.headingAndTitle", fileName),
       items = radioOptions,
       legendClasses = "govuk-fieldset__legend--l",
-      showPenaltyInformation = true
+      legendAsPageHeading = true
     )
 
     @button("common.continue")
