--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -40,7 +40,7 @@
                 items = radioOptions,
                 hint = Some(Html(messages("otherReason.uploadEvidence.question.hintText"))),
                 legendClasses = "govuk-fieldset__legend--l",
-                showPenaltyInformation = true
+                legendAsPageHeading = true
               )
 
               @button("common.continue")
