--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
@@ -54,7 +54,7 @@
                 items = radioOptions ,
                 hint = None,
                 legendClasses = "govuk-fieldset__legend--m",
-                showPenaltyInformation = false
+                legendAsPageHeading = false
             )
         }
         @button("common.continue")
