--- a/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
+++ b/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
@@ -36,7 +36,7 @@
             legendContent = messages("agents.whatCausedYouToMissTheDeadline.headingAndTitle"),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend--l",
-            showPenaltyInformation = true
+            legendAsPageHeading = true
         )
 
         @button("common.continue")
