--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -24,8 +24,7 @@
         legendClasses: Option[String] = None,
         id: String = "date",
         hintText: Option[String] = None,
-        showPenaltyInformation: Boolean = true,
-        legendAsPageHeading: Boolean = false)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
+        showPenaltyInformation: Boolean = true)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @legend = {
   <h1 class="govuk-fieldset__heading" id ="page-heading">
