--- a/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/bereavement/WhenDidThePersonDiePage.scala.html
@@ -34,8 +34,7 @@
                 form = form,
                 legendContent = messages("bereavementReason.headingAndTitle"),
                 legendClasses = Some("govuk-fieldset__legend--l"),
-                hintText = Some(messages("whenDidEventHappen.hint")),
-                legendAsPageHeading = true
+                hintText = Some(messages("whenDidEventHappen.hint"))
             )
             @button("common.continue")
         }
