--- a/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/HasTheHospitalStayEndedPage.scala.html
@@ -36,7 +36,7 @@
             legendContent = messages("healthReason.hasTheHospitalStayEnded.headingAndTitle"),
             items = radioOptions,
             legendClasses = "govuk-fieldset__legend--l",
-            showPenaltyInformation = true,
+            legendAsPageHeading = true,
             formFieldId = "hasStayEnded"
         )
 
