--- a/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WasHospitalStayRequiredPage.scala.html
@@ -36,7 +36,7 @@
             legendContent = messages("healthReason.wasHospitalStayRequired.headingAndTitle"),
             items = radioOptions,
         legendClasses = "govuk-fieldset__legend--l",
-        showPenaltyInformation = true
+        legendAsPageHeading = true
         )
 
         @button("common.continue")
