--- a/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/technicalIssues/TechnologyIssuesDatePage.scala.html
@@ -36,8 +36,7 @@
             form = form,
             legendContent = messages(s"$messagePrefix.headingAndTitle"),
             legendClasses = Some("govuk-fieldset__legend--l"),
-            hintText = Some(messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            hintText = Some(messages("whenDidEventHappen.hint"))
         )
         @button("common.continue")
     }
